# Lensy

./: .firebaserc  .gitignore  README.md  deploy_rules.js  docker-compose.yml  firebase.json  firestore.rules  index.html  installer.cs  lensly_app.cs  manager_tab_scratch.tsx  owner_tab_scratch.tsx  package-lock.json  package.json
.firebase/: hosting.YXBwc1xkZXNrdG9wXGRpc3Q.cache
api/: stripe-checkout.js  stripe-webhook.js
apps/desktop/: index.html  package.json  vite.config.ts
apps/desktop/src/: App.tsx  vite-env.d.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src/lib/: UpdateBanner.tsx  api.ts  auth-store.ts  openaiDetect.ts  roles.ts
apps/desktop/src/pages/: AdminPage.tsx  ApplicantAreaPage.tsx  DownloadPage.tsx  ForgotPasswordPage.tsx  LoginPage.tsx  MainLayout.tsx  MaintenancePage.tsx  PremiumPage.tsx  ProfilePage.tsx  RegisterPage.tsx  ResetPasswordPage.tsx  SettingsPage.tsx  StatsPage.tsx  StatusPage.tsx  SupportPage.tsx  UpdatePage.tsx  VerifyEmailPage.tsx
apps/desktop/src/styles/: global.css
apps/website/: package.json  vercel.json
apps/website/public/: index.html
apps/website/public/assets/: index--1F_pxya.js  index-6jUyb7Pv.js  index-9sf6NaKN.js  index-B2_SvpXo.css  index-B3f4tjUU.js  index-BES1VDEd.js  index-BTJB6br5.css  index-BTLUTdE_.js  index-BYAIjBDd.js  index-Bbi-gjLK.js  index-Bcz_bykP.js  index-BerJFxom.css  index-Betbq9Uw.js  (+48 more)
mailer/: mailer.js  server.js  test.js
scratch/: inspect_db.js  remove_darkness_hub.js
